--- a/src/Pages/About/About.css
+++ b/src/Pages/About/About.css
@@ -59,6 +59,23 @@
   text-align: justify;
   padding: 0 10px;
 }
+
+.about-buttons{
+  width: 200px;
+  height: 50px;
+  border-radius: 50px;
+  background-color: #22B3C1;
+  color: #fff;
+  font-weight: bold;
+   font-size: 16px;
+   border: none;
+   transition: all 0.5s ease;
+}
+.about-buttons:hover{
+  background-color: #fff;
+  color: #22B3C1;
+  border: 1px solid #22B3C1;
+}
 @media screen and (max-width:1260px) {
   .about-cards{
     width: 1000px;
