--- a/src/Pages/Countries/Countries.css
+++ b/src/Pages/Countries/Countries.css
@@ -90,6 +90,22 @@ padding: 20px;
   transform: translateX(7px);
   transition: transform 0.5s ease-in-out;
 }
+.countries-buttons{
+  width: 200px;
+  height: 50px;
+  border-radius: 50px;
+  background-color: #22B3C1;
+  color: #fff;
+  font-weight: bold;
+   font-size: 16px;
+   border: none;
+   transition: all 0.5s ease;
+}
+.countries-buttons:hover{
+  background-color: #fff;
+  color: #22B3C1;
+  border: 1px solid #22B3C1;
+}
 @media screen and (max-width:1260px) {
   .countries-cards{
     width: 1000px;
