--- a/src/Pages/Offers/Offers.css
+++ b/src/Pages/Offers/Offers.css
@@ -1,4 +1,8 @@
-
+.offer-sliders{
+  display: flex;
+  /* align-items: center; */
+  justify-content: center;
+}
 .swiper-slide{
   width: 100%;
   height: 400px;
@@ -120,12 +124,28 @@ font-family: Verdana, Geneva, Tahoma, sans-serif;
   border: 1px solid #22B3C1;
 }
 /* Responsive adjustments */
-@media (max-width: 768px) {
-  .swiper-slide {
-    font-size: 16px;
+@media (max-width: 799px) {
+  .offer-text{
+    gap: 3px;
+    font-size:18px;
+    margin: 0 auto;
+    width: 300px;
   }
-
+  .offer-cards {
+    width: 470px;
+    height: 450px;
+  }
+  
+  .offer-img {
+    width: 350px;
+    height: 350px;
+    border-top-left-radius: 50px;
+    border-bottom-left-radius: 50px;
+  }
+  
   .offer-card {
-    height: auto;
+    width: 300px;
+    height: 350px;
+    margin: 100px 0px 0px 110px;
   }
 }
