--- a/src/Components/FavoriteConnect/FavoriteConnect.css
+++ b/src/Components/FavoriteConnect/FavoriteConnect.css
@@ -3,18 +3,39 @@
     background-color: #F9F9F9;
 
   }
+  .favorite-button{
   
+  }
+  .favorite-button{
+    margin: 20px 0 ;
+    width: 100%;
+    height: 50px;
+    border-radius: 50px;
+    background-color: #22B3C1;
+    color: #fff;
+    font-weight: bold;
+     font-size: 16px;
+     border: none;
+     transition: all 0.5s ease;
+  }
+  .favorite-button:hover{
+    background-color: #fff;
+    color: #22B3C1;
+    border: 1px solid #22B3C1;
+  }
   .favorite-subject {
     font-weight: bold;
     color: #000;
     padding: 15px 0;
     font-size: 36px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    text-align: center;
   }
   
   .form-container {
     display: flex;
     justify-content: center;
+    padding: 10px;
   }
   
   .form-wrapper {
