--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -33,6 +33,27 @@
     text-align: center;
     color: #fcefef;
 }
+.footer-btn{
+
+}
+.footer-btn{
+    margin: 20px 0 ;
+    width: 200px;
+    height: 50px;
+    border-radius: 50px;
+    background-color: #22B3C1;
+    color: #fff;
+    font-weight: bold;
+     font-size: 16px;
+     /* border: none; */
+     transition: all 0.5s ease;
+     border: 2px solid #fff;
+  }
+  .footer-btn:hover{
+    background-color: #fff;
+    color: #22B3C1;
+    /* border: 1px solid #22B3C1; */
+  }
 @media screen and (max-width:950px) {
     .footer-information{
         width: 700px;
