--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,6 +1,9 @@
 .navbar{
     background-color: #22B3C1;
     width: 100%;
+    height: 70px;
+    /* position: fixed; */
+    /* z-index: 100; */
 }
 .navbar .container{
      display: flex;
