--- a/src/Pages/HomePages/HomePages.css
+++ b/src/Pages/HomePages/HomePages.css
@@ -1,9 +1,9 @@
-.homepages{
+.homepages {
   width: 100%;
-  height: 100vh ;
+  height: 100vh;
+
 }
-/* Custom styles for the Swiper component */
-/* Custom styles for the Swiper component */
+
 .mySwiper {
   width: 100%;
   height: 100vh;
@@ -37,7 +37,6 @@
 .homepages-img {
   width: 100%;
   height: 100%;
-  /* object-fit: cover; */
   object-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -58,23 +57,26 @@
   font-size: 48px;
   padding: 5px 0;
 }
-.homepages-button{
-  margin: 20px 0 ;
+
+.homepages-button {
+  margin: 20px 0;
   width: 200px;
   height: 50px;
   border-radius: 50px;
   background-color: #22B3C1;
   color: #fff;
   font-weight: bold;
-   font-size: 16px;
-   border: none;
-   transition: all 0.5s ease;
+  font-size: 16px;
+  border: none;
+  transition: all 0.5s ease;
 }
-.homepages-button:hover{
+
+.homepages-button:hover {
   background-color: #fff;
   color: #22B3C1;
   border: 1px solid #22B3C1;
 }
+
 .homepages-cards {
   display: flex;
   align-items: center;
@@ -91,14 +93,16 @@
   align-items: center;
   justify-content: center;
 }
+
 .homepages-card .icon {
   font-size: 22px;
   padding: 20px;
   border-radius: 50%;
   border: 2px solid #22B3C1;
   color: #22B3C1 !important;
-  transition: color 0.3s ease; 
+  transition: color 0.3s ease;
 }
+
 .homepages-info {
   margin-left: 10px;
 }
@@ -114,36 +118,174 @@
   color: #22B3C1;
 }
 
-.fa-regular.fa-user {
-  font-size: 30px;
-  color: white;
-}
-
-/* Responsive adjustments */
-@media (max-width: 768px) {
-  .homepages-subtitle {
-    font-size: 32px;
-  }
-
-
-
-  .homepages-card {
-    margin: 10px 0;
-  }
-}
-.homepages-btn{
+.homepages-btn {
   width: 160px;
   height: 40px;
   border-radius: 50px;
   background-color: #22B3C1;
   color: #fff;
   font-weight: bold;
-   font-size: 16px;
-   border: none;
-   transition: all 0.5s ease;
+  font-size: 16px;
+  border: none;
+  transition: all 0.5s ease;
 }
-.homepages-btn:hover{
+
+.homepages-btn:hover {
   background-color: #fff;
   color: #22B3C1;
   border: 1px solid #22B3C1;
+}
+
+/* Responsive adjustments */
+@media screen and (max-width: 1200px) {
+  .mySwiper {
+    width: 100%;
+    height: 100vh;
+    position: relative;
+  }
+  .swiper-button-prev,
+  .swiper-button-next {
+    display: none;
+  }
+  .homepages-cards {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-around;
+    margin-top: 20px;
+    width: 900px;
+    background-color: #FFFFFF;
+    border-radius: 40px;
+  }
+}
+
+@media screen and (max-width: 945px) {
+  .homepages-cards {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-around;
+    margin-top: 40px;
+    width: 500px;
+    background-color: #FFFFFF;
+    border-radius: 40px;
+  }
+}
+
+@media screen and (max-width: 540px) {
+  .homepages-content {
+    z-index: 1;
+  }
+
+  .homepages-title {
+    font-size: 16px;
+    padding: 10px 0px;
+    width: 200px;
+    margin: 0 auto;
+  }
+
+  .homepages-subtitle {
+    font-size: 25px;
+    margin: 0 auto;
+    width: 200px;
+  }
+
+  .homepages-button {
+    width: 140px;
+    height: 45px;
+    font-size: 12px;
+  }
+
+  .homepages-cards {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin-top: 100px;
+    width: 300px;
+    border-radius: 10px;
+  }
+
+  .homepages-card {
+    display: flex;
+    padding: 10px;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .homepages-card .icon {
+    font-size: 20px;
+    padding: 10px;
+  }
+
+  .homepages-person {
+    font-size: 16px;
+  }
+
+  .homepages-number {
+    font-size: 16px;
+  }
+
+  .homepages-btn {
+    width: 120px;
+    height: 35px;
+    border-radius: 20px;
+    font-weight: bold;
+    font-size: 10px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .homepages-content {
+    z-index: 1;
+  }
+
+  .homepages-title {
+    font-size: 16px;
+    padding: 10px 0px;
+    width: 200px;
+    margin: 0 auto;
+  }
+
+  .homepages-subtitle {
+    font-size: 25px;
+    margin: 0 auto;
+    width: 200px;
+  }
+
+  .homepages-button {
+    width: 120px;
+    height: 40px;
+    font-size: 10px;
+  }
+
+  .homepages-cards {
+    justify-content: space-between;
+    margin-top: 50px;
+    width: 200px;
+    border-radius: 10px;
+  }
+
+  .homepages-card {
+    display: flex;
+    padding: 10px;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .homepages-card .icon {
+    font-size: 20px;
+    padding: 10px;
+  }
+
+  .homepages-person {
+    font-size: 16px;
+  }
+
+  .homepages-number {
+    font-size: 16px;
+  }
+
+  .homepages-btn {
+    margin: 5px auto;
+  }
 }
