--- a/src/Pages/Adress/Adress.css
+++ b/src/Pages/Adress/Adress.css
@@ -5,17 +5,8 @@
 .adress-title{
     padding: 20px 0;
 }
-@media screen and (max-width: 450px) {
-    .adress-title {
-        font-size: 23px;
-        line-height: 25px;
+@media screen and (max-width: 500px) {
+    .adress{
+        display: none;
     }
-     .adress-text{ 
-    text-align: center;
-    line-height: 20px;
-    font-size: 17px;
-}
-.adress-title{
-    padding: 10px 0;
-}
 }
