--- a/src/Pages/Help/Help.css
+++ b/src/Pages/Help/Help.css
@@ -135,6 +135,9 @@ font-family: Verdana, Geneva, Tahoma, sans-serif;
     margin: 0 auto;
     width: 300px;
   }
+  .help-title{
+    font-size: 24px;
+  }
   .help-cards {
     width: 470px;
     height: 450px;
@@ -154,10 +157,83 @@ font-family: Verdana, Geneva, Tahoma, sans-serif;
   }
 }
 @media (max-width: 550px) {
+  
   .help-text{
     gap: 3px;
     font-size:18px;
     margin: 0 auto;
     width: 300px;
   }
+.swiper-pagination-bullet-active {
+  background: #007a8a;
+}
+.help-cards {
+  width: 300px;
+  height: 420px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  position: relative;
+  
+}
+
+.help-img {
+  width: 200px;
+  height: 250px;
+  border-top-left-radius: 20px;
+  border-bottom-left-radius: 20px;
+}
+
+.help-card {
+  width: 220px;
+  height: 300px;
+  margin: 100px 0px 0px 40px;
+}
+.help-subtitle{
+  font-size: 20px;
+}
+.help-card-section {
+  width: 100%;
+  text-align: center;
+  padding: 10px;
+  border-bottom: 1px solid #e0e0e0;
+}
+
+.help-card-section:last-child {
+  border-bottom: none;
+}
+.help-text{
+  color: #AFAFAF;
+  padding: 10px 0;
+  display: flex ;
+  gap: 10px;
+}
+.help-border{
+  width: 100%;
+  height: 2px;
+  background-color: #AFAFAF;
+  /* margin: 10px 0; */
+}
+.help-headline{
+  padding: 3px 0;
+  font-weight: bold;
+  font-size: 17px;
+}
+.help-button{
+  width: 150px;
+  height: 35px;
+  border-radius: 50px;
+  background-color: #22B3C1;
+  color: #fff;
+  font-weight: bold;
+   font-size: 16px;
+   border: none;
+   transition: all 0.5s ease;
+}
+.help-button:hover{
+  background-color: #fff;
+  color: #22B3C1;
+  border: 1px solid #22B3C1;
+}
 }
