--- a/src/Pages/Offers/Offers.css
+++ b/src/Pages/Offers/Offers.css
@@ -1,15 +1,19 @@
-.offer-sliders{
-  display: flex;
-  /* align-items: center; */
-  justify-content: center;
-}
+
 .swiper-slide{
   width: 100%;
   height: 400px;
+  
+}
+.offer-sliders{
+  display: flex;
+  justify-content: center;
 }
 .offer-swiper{
   width: 100%;
   height: 510px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .offer-title , .offer-text{
   text-align: center;
@@ -135,7 +139,9 @@ font-family: Verdana, Geneva, Tahoma, sans-serif;
     width: 470px;
     height: 450px;
   }
-  
+  .offer-title{
+    font-size: 24px;
+  }
   .offer-img {
     width: 350px;
     height: 350px;
@@ -148,4 +154,85 @@ font-family: Verdana, Geneva, Tahoma, sans-serif;
     height: 350px;
     margin: 100px 0px 0px 110px;
   }
+}
+@media (max-width: 550px) {
+  
+  .offer-text{
+    gap: 3px;
+    font-size:18px;
+    margin: 0 auto;
+    width: 300px;
+  }
+.swiper-pagination-bullet-active {
+  background: #007a8a;
+}
+.offer-cards {
+  width: 300px;
+  height: 420px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  position: relative;
+  
+}
+
+.offer-img {
+  width: 200px;
+  height: 250px;
+  border-top-left-radius: 20px;
+  border-bottom-left-radius: 20px;
+}
+
+.offer-card {
+  width: 220px;
+  height: 300px;
+  margin: 100px 0px 0px 40px;
+}
+.offer-subtitle{
+  font-size: 20px;
+}
+.offer-card-section {
+  width: 100%;
+  text-align: center;
+  padding: 10px;
+  border-bottom: 1px solid #e0e0e0;
+}
+
+.offer-card-section:last-child {
+  border-bottom: none;
+}
+.offer-text{
+  color: #AFAFAF;
+  padding: 10px 0;
+  display: flex ;
+  gap: 10px;
+}
+.offer-border{
+  width: 100%;
+  height: 2px;
+  background-color: #AFAFAF;
+  /* margin: 10px 0; */
+}
+.offer-headline{
+  padding: 3px 0;
+  font-weight: bold;
+  font-size: 17px;
+}
+.offer-button{
+  width: 150px;
+  height: 35px;
+  border-radius: 50px;
+  background-color: #22B3C1;
+  color: #fff;
+  font-weight: bold;
+   font-size: 16px;
+   border: none;
+   transition: all 0.5s ease;
+}
+.offer-button:hover{
+  background-color: #fff;
+  color: #22B3C1;
+  border: 1px solid #22B3C1;
+}
 }
