--- a/src/Pages/Countries/Countries.css
+++ b/src/Pages/Countries/Countries.css
@@ -285,6 +285,11 @@ height:300px;
               line-height: 16px;
               padding:  5px ;
             }
+            .countries-buttons{
+              width: 120px;
+              height: 30px;
+               font-size: 12px;
+            }
             }
             @media screen and (max-width: 380px) {
               .countries-cards{
@@ -309,6 +314,9 @@ height:300px;
             .countries-info{
               display: block;
            }
+           .countries-buttons{
+            margin: 10px 50px;
+          }
               }
               @media screen and (max-width: 350px) {
                 .countries-cards{
