--- a/src/Pages/Help/Help.css
+++ b/src/Pages/Help/Help.css
@@ -149,7 +149,9 @@ font-family: Verdana, Geneva, Tahoma, sans-serif;
     border-top-left-radius: 50px;
     border-bottom-left-radius: 50px;
   }
-  
+  .help-button{
+     font-size: 12px;
+  }
   .help-card {
     width: 300px;
     height: 350px;
@@ -223,17 +225,7 @@ font-family: Verdana, Geneva, Tahoma, sans-serif;
 .help-button{
   width: 150px;
   height: 35px;
-  border-radius: 50px;
-  background-color: #22B3C1;
-  color: #fff;
-  font-weight: bold;
-   font-size: 16px;
-   border: none;
-   transition: all 0.5s ease;
+   font-size: 12px;
 }
-.help-button:hover{
-  background-color: #fff;
-  color: #22B3C1;
-  border: 1px solid #22B3C1;
-}
+
 }
