--- a/src/Pages/HomePages/HomePages.css
+++ b/src/Pages/HomePages/HomePages.css
@@ -261,13 +261,13 @@
   .homepages-cards {
     justify-content: space-between;
     margin-top: 50px;
-    width: 200px;
+    width: 280px;
     border-radius: 10px;
   }
 
   .homepages-card {
     display: flex;
-    padding: 10px;
+    padding: 8px;
     align-items: center;
     justify-content: center;
   }
@@ -284,8 +284,16 @@
   .homepages-number {
     font-size: 16px;
   }
-
   .homepages-btn {
-    margin: 5px auto;
+    width: 100px;
+    height: 30px;
+    border-radius: 50px;
+    background-color: #22B3C1;
+    color: #fff;
+    font-weight: bold;
+    font-size: 10px;
+    border: none;
+    transition: all 0.5s ease;
   }
+
 }
