--- a/src/Components/Hamburger/Hamburger.css
+++ b/src/Components/Hamburger/Hamburger.css
@@ -1,3 +1,9 @@
+.hamburger-open{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
 .hamburger-image{
     width: 40px;
     height: 40px;
@@ -10,7 +16,7 @@
     flex-direction: column;
 }
 .hamburger-list{
-   padding: 5px 0;
+   padding: 15px 0;
 }
 .hamburger-link{
     color: #000;
